# esg-veripromise-2026

./: .gitignore  ESG_模型分析與訓練完整指南.md  ESG_永續承諾驗證競賽_2026.md  LICENSE  MASTER_PLAN_AND_PROGRESS.md  MASTER_PLAN_AND_PROGRESS_20260502.md  MASTER_PLAN_AND_PROGRESS_20260518.md  README.md  REPRODUCE.md  SOTA_Reproduction_Phase36.ipynb  [External]_VeriPromiseESG_2026_ESG_Promise_Verification_Competition_Baseline_Code_ZH.ipynb  pyproject.toml  requirements.txt  vpesg4k_train_1000 V1.csv  wen_binary_specialist.py  wen_binary_specialist_oof.py  wen_single_stem_submit.py  wen_tapt_train_only.py  wen_tune_binary_hybrid.py
configs/: base.yaml  exp_p10_large_focal_fgm.yaml  exp_p11_electra_base.yaml  exp_p13_ernie_base.yaml  exp_p13_nezha_base.yaml  exp_p15_robertalarge_t4.yaml  exp_p16_electralarge_t4.yaml  exp_p17_debertav2_t4.yaml  exp_p18_macbert_base_maxlen512.yaml  exp_p1_baseline.yaml  exp_p2_combo_best.yaml  exp_p2_combo_best_aug_plus.yaml  exp_p2_combo_best_aug_plus_tv.yaml  exp_p2_combo_best_aug_plus_v2.yaml  exp_p2_combo_best_aug_plus_v2_tv.yaml  exp_p2_combo_best_classw_focal_u13_synth.yaml  exp_p2_combo_best_classw_focal_u6pro.yaml  exp_p2_combo_best_classw_focal_u6pro_tv.yaml  exp_p2_combo_best_ema995_warm.yaml  exp_p2_combo_best_resample_t4.yaml  exp_p2_combo_best_swa.yaml  exp_p2_combo_best_tv.yaml  exp_p2_combo_best_u10_pseudo.yaml  exp_p2_combo_best_u10_pseudo_tv.yaml  exp_p2_combo_best_u10_pseudo_v2.yaml  exp_p2_combo_best_u10_pseudo_v2_classw_focal_t4_g3.yaml  exp_p2_combo_best_u10_pseudo_v2_classw_focal_t4_g3_tv.yaml  exp_p2_combo_best_u10_pseudo_v2_tv.yaml  (+46 more)
(+121 files in other folders)
